--- a/pokemon_supabase/web/index.html
+++ b/pokemon_supabase/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="pokemon_supabase">
+  <meta name="apple-mobile-web-app-title" content="pokemon_db">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>pokemon_supabase</title>
+  <title>pokemon_db</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
